# mosquito-hit-decision

./: .gitignore  README.md  infer.py  mosquito_hit_decision_proposal.md  prepare_dataset.py  pyproject.toml  train.py  train_infer_explanation.md  train_infer_explanation_with_ensemble.md
dataset/: metadata.json
dataset/test/: TRAIN_00004.csv  TRAIN_00005.csv  TRAIN_00007.csv  TRAIN_00013.csv  TRAIN_00021.csv  TRAIN_00049.csv  TRAIN_00081.csv  TRAIN_00086.csv  TRAIN_00090.csv  TRAIN_00091.csv  TRAIN_00104.csv  TRAIN_00106.csv  TRAIN_00117.csv  TRAIN_00118.csv  TRAIN_00124.csv  TRAIN_00140.csv  TRAIN_00147.csv  TRAIN_00151.csv  TRAIN_00166.csv  TRAIN_00167.csv  TRAIN_00178.csv  TRAIN_00179.csv  TRAIN_00182.csv  TRAIN_00184.csv  TRAIN_00186.csv  TRAIN_00187.csv  TRAIN_00191.csv  TRAIN_00204.csv  TRAIN_00206.csv  TRAIN_00210.csv  TRAIN_00211.csv  TRAIN_00215.csv  TRAIN_00216.csv  TRAIN_00219.csv  (+1966 more)
experiments/: ACTUAL_RADIUS_SWEEP_REPORT.md  RESULT.md  actual_radius_sweep_results.csv  actual_radius_sweep_results.json  benchmark_latency.py  plot_actual_radius_sweep.py  plot_results.py  results.json  run_actual_radius_sweep.py  run_methodology_comparison.py  run_weighted_blend_search.py  weighted_blend_results.json
notebooks/: compare_experiments.ipynb
src/: __init__.py  args.py  config.py  data_io.py  dataset.py  features.py  features_advanced.py  labels.py  metrics.py  model.py  paths.py  physics.py
tests/: test_args.py  test_data_io.py  test_dataset.py  test_features.py  test_infer.py  test_metrics.py  test_model.py  test_paths.py  test_physics.py  test_train.py
(+8000 files in other folders)
