[project]
name = "mosquito-hit-decision"
version = "0.1.0"
description = "Mosquito hit probability and fire decision baseline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
